# food-kart

./: README.md  design.md  pyproject.toml  requirements.md  testing-strategy.md
foodkart/: cli.py  customer.py  exception.py  menu.py  order.py  restaurant.py
foodkart/api/: customer_api.py  order_api.py  restaurant_api.py
foodkart/config/: config.py
foodkart/data/: db.py
foodkart/models/: customer.py  entity.py  menuitem.py  order.py  restaurant.py
foodkart/strategy/: __init__.py  api.py  cheapest_price_restaurant_selection.py  restaurant_selection.py
foodkart/utilities/: validation.py
tests/: conftest.py
tests/api/: test_customer_api.py  test_order_api.py  test_restaurant_api.py
tests/cli/: test_customer.py  utils.py
tests/strategy/: test_cheapest_price_restaurant_selection.py
