[tool.poetry]
name = "foodkart"
version = "0.1.0"
description = ""
authors = ["Alfurquan Zahedi <alzahedi@microsoft.com>"]
readme = "README.md"

[tool.poetry.scripts]
foodkart = "foodkart.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
tinydb = "^4.8.0"
typer = {extras = ["all"], version = "^0.12.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
